--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,18 @@
   "name": "Formulario PWA y Memorandum",
   "short_name": "PWA Formulario",
   "description": "Aplicación para registrar datos y jugar un memorándum interactivo",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
   "icons": [
     {
-      "src": "/assets/Logo-Castel.png",
+      "src": "./assets/Logo-Castel.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/Logo-Castel.png",
+      "src": "./assets/Logo-Castel.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -27,7 +27,7 @@
       "url": "/index.html",
       "icons": [
         {
-          "src": "/assets/Logo-Castel.png",
+          "src": "./assets/Logo-Castel.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -37,10 +37,10 @@
       "name": "Juego Memorandum",
       "short_name": "Juego",
       "description": "Iniciar el juego de memorándum",
-      "url": "/index2.html",
+      "url": "./index2.html",
       "icons": [
         {
-          "src": "/assets/Logo-Castel.png",
+          "src": "./assets/Logo-Castel.png",
           "sizes": "192x192",
           "type": "image/png"
         }
